2008-12-31  Ulrich Drepper  <drepper@redhat.com>

	* i386_disasm.c (amd3dnow): Mark as const.

	* defs/i386: Add blendvpd and blendvps opcodes.

2008-12-30  Ulrich Drepper  <drepper@redhat.com>

	* defs/i386: Add blendpd and blendps opcodes.

2008-12-19  Ulrich Drepper  <drepper@redhat.com>

	* defs/i386: Add entry for AMD 3DNOW.
	* i386_disasm.c: Implement AMD 3DNOW disassembly.

2008-12-17  Ulrich Drepper  <drepper@redhat.com>

	* i386_disasm.c (i386_disasm): If instruction matches prefix,
	undoing the prefix match finishes the instruction.

2008-01-21  Roland McGrath  <roland@redhat.com>

	* defs/i386: Fix typo in comment.
	* i386_disasm.c (i386_disasm): Handle cltq, cqto.

	* i386_parse.y: Add sanity check for NMNES macro value.
	* Makefile.am (i386_parse.o): Fix target in dependency rule.
	(i386_parse.h): New target with empty commands.
	(i386_lex.o): Depend on it in place of i386_parse.c.

2008-01-21  Ulrich Drepper  <drepper@redhat.com>

	* Makefile.am (EXTRA_DIST): Remove defs/x86_64.

2008-01-14  Ulrich Drepper  <drepper@redhat.com>

	* defs/i386: Add fixes for opcodes with register number in opcode,
	64-bit immediate forms, nop with rex.B.
	* i386_data.h [X86_64] (FCT_imm64$w): New function.
	(FCT_oreg): New function.
	(FCT_oreg$w): New function.
	* i386_disasm.c (i386_disasm): Reinitialize fmt always before
	starting the loop to process the string.  Handle 0x90 special for
	x86-64.
	* i386_parse.y (fillin_arg): Expand synonyms before concatening to
	form the function name.

2008-01-11  Ulrich Drepper  <drepper@redhat.com>

	* i386_disasm.c (struct output_buffer): Remove symcb and symcbarg.
	(i386_disasm): Remove appropriate initializers.
	Use symcb to lookup symbol strings.

	* i386_disasm.c (struct output_buffer): Add labelbuf, labelbufsize,
	symaddr_use, and symaddr fields.
	(i386_disasm): Remove labelbuf and labelbufsize variables.
	Add back %e format.  Implement %a and %l formats.
